seller form functional + tested

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,12 +2,11 @@
     <h1>eShop</h1>
     <div class="search">
         <input type="search" name="search" placeholder="Search here...">
-        <!-- <button class="btn">Search</button> -->
     </div>
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Seller</a></li>
-        <li><a href="#">Cart</a></li>
+        <li><a routerLink="seller-auth" >Seller</a></li>
+        <li><a routerLink="" >Home</a></li>
         <li><a href="#">Login</a></li>
+        <li><a href="#">Cart(0)</a></li>
     </ul>
 </nav>
