--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,7 +1,7 @@
 .nav{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
@@ -17,6 +17,7 @@ ul{
 
 li{
     list-style: none;
+    cursor: pointer;
 }
 
 a{
@@ -39,9 +40,19 @@ a{
     border: 1px solid navy;
     border-radius: 30px;
     padding: 10px;
+    width: 40%;
 }
 
 .search input {
     border: none;
     outline: none;
+}
+
+@media (max-width: 576px){
+    .search{
+        width: 100%;
+    }
+    ul{
+        margin-left: -40px;
+    }
 }
