--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,49 @@
 body {
     font-family: sans-serif;
 }
+
+.container{
+    margin: 0px 50px;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 20px;
+    align-items: center;
+}
+
+.inputClass{
+    border: 0px;
+    border-bottom: 1px solid navy;
+    padding: 10px;
+    outline: none;
+    font-size: 18px;
+    width: 50%;
+}
+
+.btn{
+    padding: 10px 20px;
+    border: none;
+    background-color: navy;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 20px;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.heading{
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 32px;
+    letter-spacing: -2px;
+    color: navy;
+}
+
+@media (max-width: 576px){
+    .inputClass{
+        width: 100%;
+    }
+}
