--- a/src/styles.css
+++ b/src/styles.css
@@ -25,13 +25,14 @@ body {
 }
 
 .btn{
-    padding: 10px 20px;
+    padding: 10px 20px !important;
     border: none;
-    background-color: navy;
-    color: #fff;
-    font-size: 18px;
-    border-radius: 20px;
-    cursor: pointer;
+    background-color: navy !important;
+    color: #fff !important;
+    font-size: 18px !important;
+    border-radius: 40px !important;
+    font-weight: 600 !important;
+    cursor: pointer !important;
     text-transform: uppercase;
 }
 
@@ -41,6 +42,7 @@ body {
     font-size: 32px;
     letter-spacing: -2px;
     color: navy;
+    margin: 40px 0px;
 }
 
 @media (max-width: 576px){
